--- a/gamabeting-front/src/components/ticket/ticket.scss
+++ b/gamabeting-front/src/components/ticket/ticket.scss
@@ -43,9 +43,35 @@
         }
         input {
             padding: 0.5em;
-            width: 7em;
-            margin-right: 1em;
+            width: 12em;
             border: none;
+        }
+
+        .value__identifier {
+            display: inline-block;
+            width: 100%;
+            margin-bottom: 2em;
+
+            input {
+                margin-left: 1em;
+            }
+
+            input::-webkit-outer-spin-button,
+            input::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+
+            input[type=number] {
+                -moz-appearance: textfield;
+            }
+        }
+
+        .tip__container {
+            text-align: center;
+            border: 1px solid $light-green;
+            padding: 1em;
+            margin-bottom: 2em;
         }
 
         .value__multi {
@@ -57,6 +83,20 @@
             width: 100%;
             font-size: 0.8em;
             margin-top: 1em;
+        }
+
+        button {
+            width: 100%;
+            height: 28px;
+            border: none;
+            color: #d8dada;
+            font-size: 14px;
+            background-color: #75890c;
+            cursor: pointer;
+
+            &:disabled {
+                background-color: #a5a2a2;
+            }
         }
     }
 }
