--- a/gamabeting-front/src/components/side-menu/menu.scss
+++ b/gamabeting-front/src/components/side-menu/menu.scss
@@ -3,6 +3,7 @@
 .side-menu {
     grid-column: 1 / 2;
     height: 100%;
+    min-height: 100vh;
     background: $dark-grey;
 
     .menu__content {
