--- a/gamabeting-front/src/components/ticket/ticket.scss
+++ b/gamabeting-front/src/components/ticket/ticket.scss
@@ -96,6 +96,7 @@
 
             &:disabled {
                 background-color: #a5a2a2;
+                cursor: not-allowed;
             }
         }
     }
