--- a/gamabeting-front/src/components/side-menu/menu.css
+++ b/gamabeting-front/src/components/side-menu/menu.css
@@ -1,6 +1,7 @@
 .side-menu {
   grid-column: 1 / 2;
   height: 100%;
+  min-height: 100vh;
   background: #4c4e4d; }
   .side-menu .menu__content--list .list--item__link {
     display: block;
