--- a/gamabeting-front/src/components/ticket/ticket.scss
+++ b/gamabeting-front/src/components/ticket/ticket.scss
@@ -104,7 +104,7 @@
     .hash-overlay {
         height: 105%;
         position: absolute;
-        top: 17%;
+        top: 5em;
         background-color: rgba(0, 0, 0, 0.7);
 
         .hash__content {
@@ -113,7 +113,7 @@
             margin: 50% auto;
             color: #000;
             text-align: center;
-            height: 30%;
+            height: 7em;
             padding: 0.5em 1em 1em;
 
             .content--close {
@@ -125,7 +125,7 @@
 
             .content--subs {
                 display: inline-block;
-                margin-bottom: 2em;
+                margin: 1.5em 0;
             }
 
             .content--hash {
