--- a/gamabeting-front/src/components/game-list/game-list.scss
+++ b/gamabeting-front/src/components/game-list/game-list.scss
@@ -1,5 +1,21 @@
 @import '../../shared/styles/palette.scss';
 
+@mixin mobile {
+    @media (max-width: 767px) { @content; }
+}
+
+  @mixin tablet {
+    @media (min-width: 768px) and (max-width: 1024px) { @content; }
+}
+  
+  @mixin desktop {
+    @media (min-width: 1025px) { @content; }
+  }
+
+.list {
+    margin-top: 4em;
+}
+
 .list__title {
     background: $medium-green;
     color: #eeefef;
@@ -17,7 +33,12 @@
     }
 }
 
+.list__title.true ~ .list__content {
+    display: none;
+}
+
 .items {
+
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     background: #f6f6f6;
@@ -28,6 +49,10 @@
     margin-bottom: 0.5em;
 
     .teams {
+        @include mobile {
+            grid-column: 1 / span 6; 
+        }
+
         grid-column: 1 / 3;
         display: grid;
         grid-template-columns: 2.5em 1fr 1fr;
@@ -46,6 +71,10 @@
     }
 
     .challenges {
+
+        @include mobile {
+            grid-column: 1 / span 6;
+        }
         grid-column: 3 / 6;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -53,16 +82,20 @@
         align-items: center;
 
         &__bet {
+            height: 4.5em;
             display: grid;
             align-content: center;
             text-align: center;
             background: #eaeaea;
-            border-radius: 0.3em;
             padding: 0.5em;
             cursor: pointer;
 
             &:hover {
                 background: $grey-hover;
+            }
+
+            &:active{
+                background-color: #000;
             }
 
             .team__title {
@@ -76,6 +109,9 @@
     }
 
     .detail {
+        @include mobile {
+            display: none; 
+        }
         align-items: center;
         text-align: center;
         display: grid;
