--- a/gamabeting-front/src/components/header/header.css
+++ b/gamabeting-front/src/components/header/header.css
@@ -16,7 +16,6 @@
     padding: 0 1em; }
     .header__grid-content--left .title {
       font-family: 'Poetsen';
-      font-size: 3em;
       background: -webkit-gradient(left top, right top, color-stop(0%, #a4b357), color-stop(20%, #75890c));
       background-color: white;
       background: #a4b357;
@@ -55,5 +54,15 @@
           cursor: pointer; }
           .header__grid-content--right .login form button:hover {
             background: #a4b357; }
+  @media (max-width: 599px) {
+    .header {
+      position: fixed;
+      width: 100%;
+      height: 3em; }
+      .header__grid-content--left .title {
+        font-size: 2em; } }
+  @media (min-width: 900px) {
+    .header__grid-content--left .title {
+      font-size: 3em; } }
   .header ::-webkit-input-placeholder {
     color: #d8dada; }
