--- a/gamabeting-front/src/components/header/header.scss
+++ b/gamabeting-front/src/components/header/header.scss
@@ -6,7 +6,21 @@
     font-style: normal;
 }
 
+@mixin for-phone-only {
+    @media (max-width: 599px) { @content; }
+  }
+  @mixin for-tablet-portrait-up {
+    @media (min-width: 600px) { @content; }
+  }
+  @mixin for-tablet-landscape-up {
+    @media (min-width: 900px) { @content; }
+  }
+  @mixin for-desktop-only {
+    @media (min-width: 1200px) and (max-width: 1799px) { @content; }
+  }
+
 .header {
+
     display: grid;
     height: 5em;
     background: $dark-grey;
@@ -21,7 +35,6 @@
         &--left {
             .title {
                 font-family: 'Poetsen';
-                font-size: 3em;
                 background: -webkit-gradient(left top, right top, color-stop(0%, rgba(164,179,87,1)), color-stop(20%, rgba(117,137,12,1)));
                 background-color: white;
                 background: rgba(164,179,87,1);
@@ -70,6 +83,32 @@
                             background: $light-green;
                         }
                     }
+                }
+            }
+        }
+    }
+
+    @include for-phone-only {
+        position: fixed;
+        width: 100%;
+        height: 3em;
+        
+        &__grid-content {
+            &--left {
+                .title {
+                    font-size: 2em;
+                }
+            }
+        }
+        
+    }
+
+    
+    @include for-tablet-landscape-up {
+        &__grid-content {
+            &--left {
+                .title {
+                    font-size: 3em;
                 }
             }
         }
