--- a/gamabeting-front/src/components/ticket/ticket.scss
+++ b/gamabeting-front/src/components/ticket/ticket.scss
@@ -231,6 +231,7 @@
         position: absolute;
         width: 290px;
         right: 0;
+        padding-bottom: 4em;
 
         &--header {
             .close-mobile {
