--- a/gamabeting-front/src/components/event-list/event-list.css
+++ b/gamabeting-front/src/components/event-list/event-list.css
@@ -1,5 +1,8 @@
 .list {
   margin-top: 4em; }
+  @media (max-width: 767px) {
+    .list {
+      margin-top: 1em; } }
 
 .list__title {
   background: #75890c;
