--- a/gamabeting-front/src/pages/dashboard/dashboard.css
+++ b/gamabeting-front/src/pages/dashboard/dashboard.css
@@ -9,7 +9,8 @@
   padding-top: 2em; }
   @media (max-width: 599px) {
     .games__list {
-      grid-column: 1 / span 8; } }
+      grid-column: 1 / span 8;
+      padding-top: 1em; } }
 
 .ticket {
   grid-column: 7 / 9; }
