add competiton infos

--- a/gamabeting-front/src/pages/eventsDetails/eventDetails.css
+++ b/gamabeting-front/src/pages/eventsDetails/eventDetails.css
@@ -1,5 +1,6 @@
 .event-details--container {
-  grid-column: 1 / span 8; }
+  grid-column: 1 / span 8;
+  margin-top: 5em; }
 
 .event-details__name {
-  margin-top: 5em; }
+  margin-top: 1em; }
