--- a/gamabeting-front/src/components/game-list/game-list.scss
+++ b/gamabeting-front/src/components/game-list/game-list.scss
@@ -60,9 +60,12 @@
         
         &__info {
             grid-column: 1 / 3;
+
         }
         &--home {
             padding-bottom: 0.5em;
+            text-decoration: none;
+            color: $medium-grey;
         }
 
         .game {
