--- a/gamabeting-front/src/shared/styles/base.scss
+++ b/gamabeting-front/src/shared/styles/base.scss
@@ -1,6 +1,22 @@
+@mixin mobile {
+    @media (max-width: 767px) { @content; }
+}
+
+  @mixin tablet {
+    @media (min-width: 768px) and (max-width: 1024px) { @content; }
+}
+  
+  @mixin desktop {
+    @media (min-width: 1025px) { @content; }
+  }
+
 .container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     min-height: 25em;
     grid-gap: 1em;
+
+    @include desktop {
+        grid-template-rows: 3em auto;
+    }
 }
