--- a/gamabeting-front/src/components/side-menu/menu.css
+++ b/gamabeting-front/src/components/side-menu/menu.css
@@ -1,11 +1,17 @@
-.side-menu {
-  grid-column: 1 / 2;
-  height: 100%;
-  min-height: 100vh;
-  background: #4c4e4d; }
-  @media (max-width: 599px) {
-    .side-menu {
-      display: none; } }
+@media (max-width: 767px) {
+  .side-menu {
+    display: none; } }
+
+@media (min-width: 768px) {
+  .side-menu {
+    grid-column: 1 / 2;
+    grid-row: 1 / span 2;
+    background: #4c4e4d; } }
+
+.side-menu .menu__content--list .list--item {
+  cursor: pointer;
+  padding: 0.5em 0 0.5em 0.4em;
+  color: #d8dada; }
   .side-menu .menu__content--list .list--item__link {
     display: block;
     padding: 0.8em 0.4em 0.8em 0.6em;
@@ -16,3 +22,8 @@
       color: #768a84; }
     .side-menu .menu__content--list .list--item__link--icon {
       margin-right: 0.6em; }
+  .side-menu .menu__content--list .list--item__subItems {
+    font-size: 0.8em;
+    display: none; }
+  .side-menu .menu__content--list .list--item.active > .list--item__subItems {
+    display: block; }
