--- a/gamabeting-front/src/components/side-menu/menu.scss
+++ b/gamabeting-front/src/components/side-menu/menu.scss
@@ -1,45 +1,38 @@
 @import '../../shared/styles/palette.scss';
 
-@mixin for-phone-only {
-    @media (max-width: 599px) { @content; }
-  }
-  @mixin for-tablet-portrait-up {
-    @media (min-width: 600px) { @content; }
-  }
-  @mixin for-tablet-portait-only {
-    @media (min-width: 600px) and (max-width: 899px) { @content; }
-  }
-  @mixin for-tablet-landscape-up {
-    @media (min-width: 900px) { @content; }
-  }
-  @mixin for-tablet-landscape-only {
-    @media (min-width: 900px) and (max-width: 1199px) { @content; }
-  }
-  @mixin for-desktop-up {
-    @media (min-width: 1200px) { @content; }
-  }
-  @mixin for-desktop-only {
-    @media (min-width: 1200px) and (max-width: 1799px) { @content; }
-  }
-  @mixin for-big-desktop-up {
-    @media (min-width: 1800px) { @content; }
-  }
+@mixin mobile {
+  @media (max-width: 767px) { @content; }
+}
+
+@mixin tablet {
+  @media (min-width: 768px){ @content; }
+}
+
+@mixin desktop {
+  @media (min-width: 1025px) { @content; }
+}
 
 
 .side-menu {
 
-    @include for-phone-only {
+    @include mobile {
         display: none; 
     }
 
-    grid-column: 1 / 2;
-    height: 100%;
-    min-height: 100vh;
-    background: $dark-grey;
+    @include tablet {
+      grid-column: 1 / 2;
+      grid-row: 1 / span 2;
+      background: $dark-grey;
+    }
+    
 
     .menu__content {
         &--list {
             .list--item {
+              cursor: pointer;
+              padding: 0.5em 0 0.5em 0.4em;
+
+              color: $light-grey-font;
                 &__link {
                     display: block;
                     padding: 0.8em 0.4em 0.8em 0.6em;
@@ -54,6 +47,17 @@
                     &--icon {
                         margin-right: 0.6em;
                     }
+                }
+
+                &__subItems {
+                  font-size: 0.8em;
+                  display: none
+                }
+
+                &.active {
+                  > .list--item__subItems {
+                    display: block;
+                  }
                 }
             }
         }
