--- a/gamabeting-front/src/shared/styles/base.css
+++ b/gamabeting-front/src/shared/styles/base.css
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   min-height: 25em;
-  grid-gap: 1em; }
+  grid-gap: 1em;
+  position: relative; }
   @media (min-width: 1025px) {
     .container {
       grid-template-rows: 3em auto; } }
