--- a/gamabeting-front/src/shared/styles/base.scss
+++ b/gamabeting-front/src/shared/styles/base.scss
@@ -15,6 +15,7 @@
     grid-template-columns: repeat(8, 1fr);
     min-height: 25em;
     grid-gap: 1em;
+    position: relative;
 
     @include desktop {
         grid-template-rows: 3em auto;
