--- a/gamabeting-front/src/components/event-list/event-list.css
+++ b/gamabeting-front/src/components/event-list/event-list.css
@@ -1,8 +1,14 @@
-.list {
-  margin-top: 4em; }
-  @media (max-width: 767px) {
-    .list {
-      margin-top: 1em; } }
+@media (max-width: 767px) {
+  .list {
+    margin-top: 1em; } }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .list {
+    margin-top: 0; } }
+
+@media (min-width: 1025px) {
+  .list {
+    margin-top: 0; } }
 
 .list__title {
   background: #75890c;
