--- a/gamabeting-front/src/components/event-list/event-list.scss
+++ b/gamabeting-front/src/components/event-list/event-list.scss
@@ -17,7 +17,14 @@
     @include mobile {
         margin-top: 1em;
     }
-    margin-top: 4em;
+    
+    @include tablet {
+        margin-top: 0;
+    }
+
+    @include desktop {
+        margin-top: 0;
+    }
 }
 
 .list__title {
