--- a/gamabeting-front/src/pages/dashboard/dashboard.css
+++ b/gamabeting-front/src/pages/dashboard/dashboard.css
@@ -14,13 +14,14 @@
     .period__filters {
       grid-column: 1 / 9; } }
 
-.games__list {
-  grid-column: 2 / 7;
-  padding-top: 2em; }
-  @media (max-width: 767px) {
-    .games__list {
-      grid-column: 1 / span 8;
-      padding-top: 0; } }
+@media (max-width: 767px) {
+  .games__list {
+    grid-column: 1 / span 8;
+    padding-top: 0; } }
+
+@media (min-width: 1025px) {
+  .games__list {
+    grid-column: 2 / 7; } }
 
 .ticket {
   grid-column: 7 / 9;
