--- a/gamabeting-front/src/components/header/header.scss
+++ b/gamabeting-front/src/components/header/header.scss
@@ -6,17 +6,16 @@
     font-style: normal;
 }
 
-@mixin for-phone-only {
-    @media (max-width: 599px) { @content; }
-  }
-  @mixin for-tablet-portrait-up {
-    @media (min-width: 600px) { @content; }
-  }
-  @mixin for-tablet-landscape-up {
-    @media (min-width: 900px) { @content; }
-  }
-  @mixin for-desktop-only {
-    @media (min-width: 1200px) and (max-width: 1799px) { @content; }
+@mixin mobile {
+    @media (max-width: 767px) { @content; }
+}
+
+  @mixin tablet {
+    @media (min-width: 768px){ @content; }
+}
+  
+  @mixin desktop {
+    @media (min-width: 1025px) { @content; }
   }
 
 .header {
@@ -88,10 +87,11 @@
         }
     }
 
-    @include for-phone-only {
+    @include mobile {
         position: fixed;
         width: 100%;
         height: 3em;
+        z-index: 99;
         
         &__grid-content {
             &--left {
@@ -104,7 +104,7 @@
     }
 
     
-    @include for-tablet-landscape-up {
+    @include tablet {
         &__grid-content {
             &--left {
                 .title {
